--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bats'
 - !lcc 'QH'
+- GITenberg
 title: Neotropical Bats from Western México
 url: http://www.gutenberg.org/ebooks/31084
